--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ button:focus {
 
 #headerArea{
 	position: relative; float: left; width: 100%; height: 5%;
-	color: #FFFFFF; font-size: 20px; z-index: 1;
+	color: #FFFFFF; font-size: 25px; z-index: 1;
 }
 
 #bodyArea{
@@ -66,7 +66,11 @@ button:focus {
 }
 
 #headerTitleBlick{
-	position: relative; float: left; padding: 5px 10px; font-size: 25px;
+	position: relative; float: left; padding: 5px 10px;
+}
+#headerSignUp{
+	position: relative; float: right; padding: 5px 10px;
+	background-color: transparent; color: #FFFFFF; width: 110px; height: 40px; font-size: 20px;
 }
 /*#headerSetting{
 	position: relative; float: right; padding: 5px 10px; cursor: pointer;
@@ -127,6 +131,71 @@ button:focus {
 	position: absolute; width: 200px; height: 50px; top: 30px; left: 175px;
 	font-size: 20px; color: #000000;
 }
+
+#signupBox{
+	position: relative; margin: 6% auto;
+	width: 440px; height: 600px; border-radius: 40px;
+	background-color: #FFFFFF; font-size: 20px; color: black; display: none;
+}
+#signupBoxCloseBtn{
+	background: url(../media/btn_close_normal.png) no-repeat;
+	position: absolute; width: 48px; height: 48px;
+	top: -10px; left: 400px; z-index: 1;
+}
+#signupBoxCloseBtn:hover{
+	background: url(../media/btn_close_on.png) no-repeat;
+}
+#signupBoxCloseBtn:active{
+	background: url(../media/btn_close_onClick.png) no-repeat;
+}
+#signupBoxBody{
+	position: relative; padding: 30px 20px; width: 400px; height: 540px;
+}
+.signupBoxBodySpans{
+	position: relative; float: left; margin: 15px 10px 0 25px;
+	width: 60px; height: 30px;
+}
+#signupBoxTitle{
+	position: relative; float: left; text-align: center; font-size: 30px;
+	width: 100%; height: 30px; margin: 10px 10px 35px;
+}
+#signupBoxID{
+	position relative; float: left; margin: 10px;
+	width: 200px; height: 30px;
+}
+#signupBoxPW{
+	position relative; float: left; margin: 10px;
+	width: 260px; height: 30px;
+}
+#signupBoxPWCheck{
+	position relative; float: left; margin: 10px;
+	width: 260px; height: 30px;
+}
+#signupBoxPasswordCheckDesc{
+	position: relative; float: left; margin: 5px;
+	width: 100%; height: 15px; font-size: 15px; left: 105px;
+}
+#signupBoxAddress{
+	position relative; float: left; margin: 10px;
+	width: 260px; height: 30px;
+}
+#signupBoxPhoneNumber{
+	position relative; float: left; margin: 10px;
+	width: 260px; height: 30px;
+}
+#signupBoxEmail{
+	position relative; float: left; margin: 10px;
+	width: 260px; height: 30px;
+}
+
+#signupBoxIDCheck{
+	position: relative; float: left; width: 60px; height: 30px; font-size: 15px; margin: 12px 0;
+}
+#signupBoxSubmit{
+	position: absolute; width: 200px; height: 50px; font-size: 30px;
+	top: 500px; left: 125px;
+}
+
 
 #footerSearchMyInfo{
 	position: relative; margin: 10px 10px 0; cursor: pointer;
