--- a/css/index.css
+++ b/css/index.css
@@ -217,6 +217,10 @@ button:focus {
 #mainPageArea{
 	position: absolute; width: 100%; height: 100%; display: none;
 }
+#mainPageTransparentLayer{
+	position: absolute; width: 100%; height: 100%; z-index: 5; display: none;
+	background-color: #005790; opacity: 0.1;
+}
 #mainPageHeaderTap{
 	position: relative; float: left; width: 100%; height: 5%; z-index: 1;
 }
@@ -269,7 +273,19 @@ button:focus {
 #validPwBox{
     position: relative; margin: 10% auto;
     width: 400px; height: 400px; border-radius: 40px;
-    background-color: #FFFFFF; display: none;
+    background-color: #FFFFFF; z-index: 7; display: none;
+}
+
+#validPwBoxCloseBtn{
+	background: url(../media/btn_close_normal.png) no-repeat;
+	position: absolute; width: 48px; height: 48px;
+	top: -10px; left: 370px; z-index: 1;
+}
+#validPwBoxCloseBtn:hover{
+	background: url(../media/btn_close_on.png) no-repeat;
+}
+#validPwBoxCloseBtn:active{
+	background: url(../media/btn_close_onClick.png) no-repeat;
 }
 
 #validPwBoxHead{
@@ -288,7 +304,7 @@ button:focus {
 #validPwBoxBody{
     position: relative; float: left; width: 100%; height: 50%;
 }
-#validPassword{
+#validPWBoxPassword{
     position: relative;
     float: left;
     width: 55%;
@@ -296,7 +312,7 @@ button:focus {
     margin: 15px 30px;
     font-size: 20px;
 }
-#pw{
+#validPWBoxText{
     font-size: 20px;
     color: #ea984e;
     position: relative;
@@ -314,7 +330,19 @@ button:focus {
 #infoSettingBox{
     position: relative; margin: 10% auto;
     width: 500px; height: 400px; border-radius: 40px;
-    background-color: #FFFFFF; display: none;
+    background-color: #FFFFFF; z-index: 7; display: none;
+}
+
+#infoSettingBoxCloseBtn{
+	background: url(../media/btn_close_normal.png) no-repeat;
+	position: absolute; width: 48px; height: 48px;
+	top: -10px; left: 470px; z-index: 1;
+}
+#infoSettingBoxCloseBtn:hover{
+	background: url(../media/btn_close_on.png) no-repeat;
+}
+#infoSettingBoxCloseBtn:active{
+	background: url(../media/btn_close_onClick.png) no-repeat;
 }
 
 #infoSettingBoxHead{
