--- a/css/index.css
+++ b/css/index.css
@@ -268,8 +268,6 @@ button:focus {
 }
 
 
-/* 경필 */
-
 #validPwBox{
     position: relative; margin: 10% auto;
     width: 400px; height: 400px; border-radius: 40px;
@@ -387,16 +385,13 @@ button:focus {
     font-size: 20px;
 }
 
-/* 경필 */
 
-
-/* 경미 */
 #HWPurchase{
 	position: relative; float: left; padding: 5px 10px; padding-left: 40%;
 }
 
 #descriptionBox{
-	position: relative; margin: 10% auto;
+	position: relative; margin: 6% auto;
 	width: 700px; height: 360px; border-radius: 40px;
 	background-color: #FFFFFF; display: none;
 }
@@ -421,11 +416,21 @@ button:focus {
 }
 
 #paymentBox{
-	position: relative; margin: 10% auto;
-	width: 400px; height: 300px; border-radius: 40px;
+	position: relative; margin: 6% auto;
+	width: 430px; height: 450px; border-radius: 40px;
 	background-color: #FFFFFF; display: none;
 }
-
+#paymentBoxCloseBtn{
+	background: url(../media/btn_close_normal.png) no-repeat;
+	position: absolute; width: 48px; height: 48px;
+	top: -10px; left: 395px; z-index: 1;
+}
+#paymentBoxCloseBtn:hover{
+	background: url(../media/btn_close_on.png) no-repeat;
+}
+#paymentBoxCloseBtn:active{
+	background: url(../media/btn_close_onClick.png) no-repeat;
+}
 #paymentTitle{
 	position: relative; float: left; width: 100%;
 	font-size: 30px;
@@ -435,29 +440,25 @@ button:focus {
 
 #paymentInfo{
 	position: relative; float: left; width: 100%;
-	font-size: 20px;
-	border: none;
-	margin: 10px auto;
+	font-size: 20px; margin: 10px auto; border: none;
+}
+
+.paymentBoxSpans{
+	position: relative; float: left; margin: 15px 10px 0 25px;
+	width: 60px; height: 30px;
+}
+
+input.payinfo{
+	width: 270px; margin: 15px 10px 10px 25px; padding-left: 7px;
+	font-size: 20px; border:none; border-bottom-style: outset; border-bottom-width: 2px;
 }
 
 #paymentCheckOut{
 	position: relative; float: left; width: 100%;
-	float: left;
-	font-size: 20px;
-	margin-left: 25%;
-	margin-top: 20px;
+	font-size: 20px; margin-top: 20px; margin-left: 30%;
 }
 
-input.payinfo{
-	margin-left: 10%; margin-right: auto; margin-bottom: 4px;
-	font-size: 20px;
-	border:none;
-	border-bottom-style: outset;
-	border-bottom-width: 2px;
-}
-
-#payCheckOut{
+#payCheckOutBtn{
 	font-size: 20px;
 	background-color: lightblue;
 }
-/* 경미 */
