--- a/css/index.css
+++ b/css/index.css
@@ -77,9 +77,6 @@ button:focus {
 	background-color: transparent; color: #FFFFFF; width: 110px; height: 40px; font-size: 20px;
 	display: none;
 }
-/*#headerSetting{
-	position: relative; float: right; padding: 5px 10px; cursor: pointer;
-}*/
 
 #loginBox{
 	position: relative; margin: 10% auto;
@@ -327,7 +324,7 @@ button:focus {
 
 #infoSettingBox{
     position: relative; margin: 10% auto;
-    width: 500px; height: 400px; border-radius: 40px;
+    width: 500px; height: 520px; border-radius: 40px;
     background-color: #FFFFFF; z-index: 7; display: none;
 }
 
@@ -344,47 +341,36 @@ button:focus {
 }
 
 #infoSettingBoxHead{
-    position: relative;
-    float: left;
-    width: 100%;
-    height: 25%;
+    position: relative; float: left; width: 100%; height: 20%;
 }
 
 #infoSettingDescription{
-    position: relative;
-    top: 50%;
-    float: left;
-    width: 100%;
-    height: 50px;
-    text-align: center;
-    font-size: 20px;
-    color: #3B5998;
+    position: relative; float: left; top: 40%; width: 100%; height: 50px;
+    font-size: 30px; text-align: center; color: #3B5998;
 }
 
 #infoSettingBoxBody{
-    position: relative;
-    float: left;
-    width: 100%;
-    height: 50%;
+    position: relative; float: left; width: 100%; height: 65%;
 }
 
 .settingText{
-    width: 20%;
-    font-size: 20px;
-    color: #ea984e;
-    position: relative;
-    float: left;
-    left: 40px;
+    position: relative; float: left; left: 40px; width: 20%;
+    font-size: 20px; color: #ea984e; margin: 11px 0;
 }
 .settingTextBox{
-    position: relative;
-    float: left;
-    width: 60%;
-    height: 30px;
-    margin: 15px 30px;
-    font-size: 20px;
+    position: relative; float: left; width: 60%; height: 30px; margin: 7px 30px;
+    font-size: 20px; padding-left: 5px;
 }
 
+#settingBoxPasswordCheckDesc{
+	position: relative; float: left; margin: 5px;
+	width: 100%; height: 15px; font-size: 15px; left: 130px;
+}
+
+#settingBoxConfirmBtn{
+	position: absolute; width: 160px; height: 50px; font-size: 30px;
+	top: 440px; left: 175px;
+}
 
 #HWPurchase{
 	position: relative; float: left; padding: 5px 10px; padding-left: 40%;
