author, creation date 등 기재

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+/**
+ * Eye-Tracker Project Web Platform
+ * 
+ * Author: Jaesung Ryu
+ * Creation date: 2014/10/24
+ * 
+ * © Team Confidence
+ * 
+ * Modification history
+ */
 @charset "utf-8";
 
 html,body {
