--- a/css/index.css
+++ b/css/index.css
@@ -238,7 +238,7 @@ button:focus {
 	font-size: 25px; color: #FFFFFF; cursor: pointer; text-align: center;
 }
 #mainPageContentsArea{
-	position: relative; float: left; width: 100%; height: 95%; overflow-y: scroll;
+	position: relative; float: left; width: 100%; height: 95%; /*overflow-y: scroll;*/
 }
 .mainPageContents{
 	position: absolute; width: 92%; height: 92%; margin: 5% 4%;
