--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,7 @@ button:focus {
 
 #bodyArea{
 	position: relative; float: left; width: 100%; height: 90%;
-	z-index: 1;
+	z-index: 1; min-width: 800px;
 }
 
 #footerArea{
@@ -241,7 +241,7 @@ button:focus {
 	position: relative; float: left; width: 100%; height: 95%; /*overflow-y: scroll;*/
 }
 .mainPageContents{
-	position: absolute; width: 92%; height: 92%; margin: 5% 4%;
+	position: absolute; width: 92%; height: 92%; margin: 5% 4%; min-width: 800px;
 }
 #mainPageSearchContainer{
 	position: absolute; width: 350px; height: 45px; top: 30px; left: 55px;
@@ -298,14 +298,14 @@ button:focus {
 }
 
 .mainPageContentsItems{
-	position: relative; float: left; width: 150px; height: 180px; cursor: pointer; margin: 15px 15px 0;
+	position: relative; float: left; width: 200px; height: 260px; cursor: pointer; margin: 30px 25px 0;
 }
 .mainPageContentsItemIcon{
-	position: relative; float: left; width: 120px; height: 120px; margin: 15px 15px 7px;
+	position: relative; float: left; width: 170px; height: 170px; margin: 15px 15px 7px;
 }
 .mainPageContentsItemTitle{
-	position: relative; float: left; width: 150px; height: 30px;
-	text-align: center; font-size: 18px; color: #FFFFFF;
+	position: relative; float: left; width: 200px; height: 40px;
+	text-align: center; font-size: 27px; color: #FFFFFF;
 }
 
 
