--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 /**
  * Eye-Tracker Project Web Platform
  * 
@@ -6,7 +7,6 @@
  * 
  * © Team Confidence
  */
-@charset "utf-8";
 
 html,body {
     background-color: #FFF;
@@ -54,7 +54,7 @@ button:focus {
 }
 
 #mainArea{
-	position: absolute; width: 100%; height: 100%;
+	position: absolute; width: 100%; height: 100%; min-width: 800px; min-height: 800px;
 	background: url(../media/img_bg.png) repeat;
 }
 
@@ -238,13 +238,13 @@ button:focus {
 	font-size: 25px; color: #FFFFFF; cursor: pointer; text-align: center;
 }
 #mainPageContentsArea{
-	position: relative; float: left; width: 100%; height: 95%; /*overflow-y: scroll;*/
+	position: relative; float: left; width: 100%; height: 95%;
 }
 .mainPageContents{
-	position: absolute; width: 92%; height: 92%; margin: 5% 4%; min-width: 800px;
+	position: absolute; width: 92%; height: 92%; margin: 4% 4%; min-width: 800px;
 }
 #mainPageSearchContainer{
-	position: absolute; width: 350px; height: 45px; top: 30px; left: 55px;
+	position: relative; width: 350px; height: 45px; top: 35px; left: 55px;
 }
 #mainPageContentsSearch{
 	position: absolute; width: 300px; height: 35px; top: 5px; left: 20px;
@@ -491,5 +491,5 @@ input.payinfo{
 
 #payCheckOutBtn{
 	font-size: 20px;
-	background-color: lightblue;
+	background-color: #8FD8D8;
 }
