--- a/css/index.css
+++ b/css/index.css
@@ -279,7 +279,7 @@ button:focus {
 	background: url(../media/btn_close_onClick.png) no-repeat;
 }
 #contentsPurchasePopupIcon{
-	position: relative; float: left; width: 200px; height: auto; margin: 15px 15px 7px;
+	position: relative; float: left; width: 200px; height: auto; margin: 15px 5px 7px 15px;
 }
 #contentsPurchasePopupTitle{
 	position: relative; float: left; width: 200px; height: 100px;
