--- a/css/index.css
+++ b/css/index.css
@@ -241,7 +241,7 @@ button:focus {
 	position: relative; float: left; width: 100%; height: 95%;
 }
 .mainPageContents{
-	position: absolute; width: 92%; height: 92%; margin: 4% 4%; min-width: 800px;
+	position: absolute; width: 92%; height: 92%; margin: 4% 4% 0; min-width: 800px;
 }
 #mainPageSearchContainer{
 	position: relative; width: 350px; height: 45px; top: 35px; left: 55px;
