--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,8 @@
 html,body {
     background-color: #FFF;
     color: #000;
-    font-family: Times New Roman, helvetica, arial, sans-serif;
+    /*font-family: Times New Roman, helvetica, arial, sans-serif;*/
+    font-family: 'Raleway', sans-serif;
     margin: 0;
     padding: 0;
     font-size: 9pt;
@@ -75,6 +76,7 @@ button:focus {
 
 #headerTitleBlick{
 	position: relative; float: left; padding: 5px 10px;
+	font-weight: 800; font-size: 33px;
 }
 #headerSignUp{
 	position: relative; float: right; padding: 5px 10px;
@@ -230,12 +232,12 @@ button:focus {
 	position: relative; float: left; width: 100%; height: 5%; z-index: 1;
 }
 .mainPageHeaders{
-	position: relative; float: left; width: 160px; padding: 10px; margin: 10px;
-	font-size: 25px; color: #FFFFFF; cursor: pointer; text-align: center;
+	position: relative; float: left; width: 230px; padding: 10px 0; margin: 5px 15px;
+	font-size: 30px; font-weight: 600; color: #FFFFFF; cursor: pointer; text-align: center;
 }
 #mainPageHeaderSettings{
-	position: relative; float: right; width: 160px; padding: 10px; margin: 10px;
-	font-size: 25px; color: #FFFFFF; cursor: pointer; text-align: center;
+	position: relative; float: right; width: 160px; padding: 10px 0; margin: 5px 15px;
+	font-size: 30px; font-weight: 600; color: #FFFFFF; cursor: pointer; text-align: center;
 }
 #mainPageContentsArea{
 	position: relative; float: left; width: 100%; height: 95%;
