--- a/css/index.css
+++ b/css/index.css
@@ -230,7 +230,7 @@ button:focus {
 	background-color: #005790; opacity: 0.1;
 }
 #mainPageHeaderTap{
-	position: relative; float: left; width: 100%; height: 5%; z-index: 1;
+	position: relative; float: left; width: 100%; height: 5%; min-width: 1000px; z-index: 1;
 }
 .mainPageHeaders{
 	position: relative; float: left; width: 230px; padding: 10px 0; margin: 5px 15px;
