--- a/css/index.css
+++ b/css/index.css
@@ -494,10 +494,10 @@ input.payinfo{
 
 #paymentCheckOut{
 	position: relative; float: left; width: 100%;
-	font-size: 20px; margin-top: 20px; margin-left: 30%;
+	font-size: 20px; margin: 20px auto;
 }
 
 #payCheckOutBtn{
-	font-size: 20px;
-	background-color: #FFFFFF;
+	position: relative; margin: 0 90px; width: 250px; height: 40px;
+	text-align: center; font-size: 20px; background-color: #FFFFFF; 
 }
